Documentation and licensing updates